# SlumggolTech

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_simhash_columns.py  0003_add_claim_intelligence_cache_columns.py  0003_add_escalation_queue.py  0004_add_escalation_queue.py
article-classifier/: README.md  ingest_articles.py  librechat.yaml
article-classifier/mcp-classifier/: requirements.txt  server.py
mcp-classifier/: .!48200!server.py  Dockerfile  server.py
scripts/: debug_evolution.sh  debug_telegram.sh  get_cloudflare_tunnel_url.sh  manage_clickhouse.py  pair_evolution.sh  set_telegram_webhook.sh  sync_telegram_webhook.py
sql/: clickhouse_bot_analytics.sql  clickhouse_bot_analytics_migrate_v2.sql
src/slumggol_bot/: __init__.py  config.py  main.py  polling.py  schemas.py
src/slumggol_bot/api/: app.py
src/slumggol_bot/db/: models.py  repositories.py  session.py
src/slumggol_bot/prompts/: factcheck_system.txt
src/slumggol_bot/services/: analytics.py  cache.py  escalation.py  factcheck.py  freshness.py  gating.py  hashing.py  language.py  outbreak.py  pipeline.py  rate_limit.py  sealion.py  style_profiles.py  translation.py
tests/: test_admin_api.py  test_analytics.py  test_factcheck.py  test_freshness.py  test_gate.py  test_outbreak.py  test_pipeline_commands.py  test_pipeline_events.py  test_pipeline_failures.py  test_polling.py  test_telegram_transport.py  test_worker_settings.py
(+5 files in other folders)
