[project]
name = "isrealanot"
version = "0.1.0"
description = "IsRealANot: Telegram fact-check bot with GPT-5.4 and ClickHouse analytics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "arq>=0.26.0",
  "asyncpg>=0.30.0",
  "clickhouse-connect>=0.8.15",
  "fastapi>=0.115.6",
  "greenlet>=3.1.1",
  "httpx>=0.28.1",
  "imagehash>=4.3.1",
  "openai>=1.65.0",
  "pillow>=11.1.0",
  "pydantic-settings>=2.7.1",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.37",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.1",
  "pytest-asyncio>=0.25.3",
  "pytest>=8.3.4",
  "respx>=0.22.0",
]

[project.scripts]
slumggol-api = "slumggol_bot.main:run"
slumggol-poller = "slumggol_bot.polling:run"
slumggol-worker = "slumggol_bot.workers.settings:run_worker"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]

[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.uv]
package = true
